--- a/vignettes/INLAvsMCMC.Rmd
+++ b/vignettes/INLAvsMCMC.Rmd
@@ -1,16 +1,18 @@
 ---
 title: "Spatial Econometrics Models with INLA and MCMC"
-author: "Virgilio Gómez-Rubio"
+author: "Virgilio Gomez-Rubio"
 output: pdf_document
 vignette: >
   %\VignetteIndexEntry{Spatial Econometrics Models with INLA and MCMC}
   %\VignetteEngine{knitr::rmarkdown}
-  \usepackage[utf8]{inputenc}
+  %\VignetteEncoding{ISO-8859-1}
 ---
 
 # Introduction
 
 In this example we compare the implementatin of several Spatial Econometrics models using INLA and MCMC. In particular, the implementation of these methods with INLA is based on the *slm* latent class, whilst the implementation with MCMC has been done with *jags* and it is available in package *SEjags*.
+
+
 
 ```{r results = "hide"}
 library(SEjags)
@@ -20,6 +22,10 @@ library(INLA)
 
 
 # MCMC models
+
+In this example, we will be using the *columbus* dataset available in package
+*spdep*. First of all, we will create the adjacency matrix and fit
+the SEM, SLM and SDM models using package *SEjags*.
 
 ```{r results = "hide"}
 data(columbus)
@@ -63,6 +69,11 @@ if(!file.exists("INLAvsMCMC-MCMC.Rdata") ) {
 
 # INLA models
 
+Next, we will fit the same models using *INLA*. This involves creating
+a sparse adjacency matrix and several model matrices for the SLM and SDM
+models. This is so becuase these are required by the *slm* latent
+effect.
+
 ```{r results = "hide"}
 #Area index
 columbus$idx <- 1:nrow(columbus)
@@ -73,20 +84,36 @@ W.inla <- as(W, "CsparseMatrix")
 mmatrix <- model.matrix(m.form, columbus)
 mmatrix2 <-  cBind(mmatrix, W.inla %*% mmatrix[,-1])
 colnames(mmatrix2)[4:5]<- paste("lag", colnames(mmatrix2)[2:3],sep="")
+```
 
+Also, we need to set the variance of the Gaussian distribution to almost
+zero because this error term does not appear in the  models that we
+are fitting.
+
+```{r results = "hide"}
 #Zero-variance for error term
 #Zero-variance to remove effect in linear predictor: DOES NOT WORK
 zero.variance = list(prec=list(initial = 25, fixed=TRUE))
 #Large variance to allow for an uncnstrained estimation of the other parameters
 #zero.variance = list(prec=list(initial = 1/100, fixed=TRUE))
+```
 
+Next, we need to set find a suitable range for the spatial autocorrelation
+paramter. This is done by using the eigenvalues of the adjacency matrix.
+
+```{r results = "hide"}
 #Compute eigenvalues for SLM model (as in Havard's code)
 e = eigen(W.inla)$values
 re.idx = which(abs(Im(e)) < 1e-6)
 rho.max = 1/max(Re(e[re.idx]))
 rho.min = 1/min(Re(e[re.idx]))
 rho = mean(c(rho.min, rho.max))
+```
+The precision matrix of the prior of the betas in the latent effect
+is also needed. We need to set one for the SLM model and another for the
+SDM model given the different number of covariates and lagged-covariates.
 
+```{r results = "hide"}
 #
 #Variance-covarinace matrix for beta coeffients' prior
 #
@@ -97,8 +124,11 @@ Q.beta = betaprec * Q.beta
 #Regression model with lagged covariates
 Q.beta2 = Diagonal(n = ncol(mmatrix2), x = 1)
 Q.beta2 = betaprec * Q.beta2
+```
+In the code below, we set the default parameters of the slm latent effect
+and the prior for the hyperparamters.
 
-
+```{r results = "hide"}
 #Arguments for slm latent model
 args.slm = list(
    rho.min = rho.min,
@@ -108,11 +138,17 @@ args.slm = list(
    Q.beta = matrix(1,0,0)
 )
 
-#Hyperparameters
+#Priors of Hyperparameters
 hyper.slm = list(
    prec = list(prior = "loggamma", param = c(0.01, 0.01)),
       rho = list(initial = 0, prior = "logitbeta", param = c(1,1))
 )
+```
+
+
+These are the precisions for the intercept and other fixed effects
+in the model that are not part of the *slm* latent effect.
+```{r results = "hide"}
 
 
 #Control fixed
@@ -174,6 +210,7 @@ lc.linpred2 <- lapply(1:n, function(X) {
 lc.linpred2 <- do.call(c, lc.linpred2)
 names(lc.linpred2) <- paste("lc", 1:n, sep = "")
 
+#SEM model
 sem.inla<-inla(CRIME ~ INC + HOVAL +
    f(idx, model = "slm", args.slm = args.slm, hyper = hyper.slm),
    data = as.data.frame(columbus), family = "gaussian",
