--- a/vignettes/INLAvsMCMC.Rmd
+++ b/vignettes/INLAvsMCMC.Rmd
@@ -5,16 +5,16 @@ output: pdf_document
 vignette: >
   %\VignetteIndexEntry{Spatial Econometrics Models with INLA and MCMC}
   %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{ISO-8859-1}
+  %\VignetteEncoding{UTF-8}
 ---
 
 # Introduction
 
-In this example we compare the implementatin of several Spatial Econometrics models using INLA and MCMC. In particular, the implementation of these methods with INLA is based on the *slm* latent class, whilst the implementation with MCMC has been done with *jags* and it is available in package *SEjags*.
+In this example we compare the implementation of several Spatial Econometrics models using INLA and MCMC. In particular, the implementation of these methods with INLA is based on the `slm` latent class, whilst the implementation with MCMC has been done with `jags` and it is available in package `SEjags`.
 
 
 
-```{r results = "hide"}
+```{r results = "hide", message = FALSE}
 library(SEjags)
 library(INLA)
 
@@ -23,9 +23,9 @@ library(INLA)
 
 # MCMC models
 
-In this example, we will be using the *columbus* dataset available in package
-*spdep*. First of all, we will create the adjacency matrix and fit
-the SEM, SLM and SDM models using package *SEjags*.
+In this example, we will be using the `columbus` dataset available in package
+`spdep`. First of all, we will create the adjacency matrix and fit
+the SEM, SLM and SDM models using package `SEjags`.
 
 ```{r results = "hide"}
 data(columbus)
@@ -69,10 +69,10 @@ if(!file.exists("INLAvsMCMC-MCMC.Rdata") ) {
 
 # INLA models
 
-Next, we will fit the same models using *INLA*. This involves creating
+Next, we will fit the same models using `INLA`. This involves creating
 a sparse adjacency matrix and several model matrices for the SLM and SDM
-models. This is so becuase these are required by the *slm* latent
-effect.
+models. This is so becuase these are required by the `slm` latent
+model.
 
 ```{r results = "hide"}
 #Area index
@@ -92,14 +92,11 @@ are fitting.
 
 ```{r results = "hide"}
 #Zero-variance for error term
-#Zero-variance to remove effect in linear predictor: DOES NOT WORK
-zero.variance = list(prec=list(initial = 25, fixed=TRUE))
-#Large variance to allow for an uncnstrained estimation of the other parameters
-#zero.variance = list(prec=list(initial = 1/100, fixed=TRUE))
+zero.variance = list(prec=list(initial = 25, fixed = TRUE))
 ```
 
 Next, we need to set find a suitable range for the spatial autocorrelation
-paramter. This is done by using the eigenvalues of the adjacency matrix.
+parameter. This is done by using the eigenvalues of the adjacency matrix.
 
 ```{r results = "hide"}
 #Compute eigenvalues for SLM model (as in Havard's code)
@@ -109,7 +106,7 @@ rho.max = 1/max(Re(e[re.idx]))
 rho.min = 1/min(Re(e[re.idx]))
 rho = mean(c(rho.min, rho.max))
 ```
-The precision matrix of the prior of the betas in the latent effect
+The precision matrix of the prior of the coefficients of the covariates in the latent effect
 is also needed. We need to set one for the SLM model and another for the
 SDM model given the different number of covariates and lagged-covariates.
 
@@ -119,13 +116,11 @@ SDM model given the different number of covariates and lagged-covariates.
 #
 betaprec <- .001
 #Standard regression model
-Q.beta = Diagonal(n = ncol(mmatrix), x = 1)
-Q.beta = betaprec * Q.beta
+Q.beta = Diagonal(n = ncol(mmatrix), x = betaprec)
 #Regression model with lagged covariates
-Q.beta2 = Diagonal(n = ncol(mmatrix2), x = 1)
-Q.beta2 = betaprec * Q.beta2
+Q.beta2 = Diagonal(n = ncol(mmatrix2), x = betaprec)
 ```
-In the code below, we set the default parameters of the slm latent effect
+In the code below, we set the default parameters of the `slm` latent effect
 and the prior for the hyperparamters.
 
 ```{r results = "hide"}
@@ -147,7 +142,8 @@ hyper.slm = list(
 
 
 These are the precisions for the intercept and other fixed effects
-in the model that are not part of the *slm* latent effect.
+in the model that are not part of the `slm` latent effect. These
+are the same as in the MCMC model.
 ```{r results = "hide"}
 
 
@@ -158,11 +154,6 @@ c.fixed <- list(prec = 0.001, prec.intercept = 0.001)
 Fitting models with INLA:
 
 ```{r results = "hide"}
-
-#SEM model
-hyper.sem <- hyper.slm
-hyper.sem$rho$initial <- 0.85 #Fixed to posterior mode from MCMC
-hyper.sem$rho$fixed <- TRUE
 
 #Change zero variance
 zero.variance$prec$initial <- 1/100
@@ -175,7 +166,6 @@ c.inla <- list(strategy = "laplace", fast = FALSE,
 
 # Create linear combinations on the covariates to estimate
 # linear predictor (and fitted values).
-
 n <- nrow(columbus)
 
 #Test how the structure of the linear combinatios should be
@@ -321,7 +311,7 @@ for(v in 1:9) {
 ### Estimates of the random effects
 
 We compare now the estimates of the random effects by INLA and MCMC. For
-MCMC, the values of the random effects is computed by taking the difference
+MCMC, the values of the random effects are computed by taking the difference
 between the observed value and the fixed effects. Then, the posterior
 mean and standard deviations are computed. For INLA, we have used the values
 reported. 
